--- a/frontend/src/app/components/form-story/form-story.component.html
+++ b/frontend/src/app/components/form-story/form-story.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
     <div id="div-story">
-        <p id="title">Inserisci i dati della <span>storia</span></p>
+        <p id="title">Inserisci i <span>dati</span> della <span>storia</span></p>
         <form (ngSubmit)="onSubmit()">
             <div id="div-form">
                 <label for="titolo">Titolo</label>
