--- a/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.css
+++ b/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.css
@@ -1,64 +1,99 @@
-.multiple-choice-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+* {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+}
+
+.div-multiple-choice {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
+    margin-top: 5rem;
+    padding: 25px 25px;
+    background-color: rgb(244, 244, 244);
+    border-radius: 10px;
+    box-shadow: 15px 15px 15px #aaaa;
+}
+
+.div-title {
     text-align: center;
+    width: 100%;
 }
 
-.multiple-choice-form {
-    margin-top: 20px;
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-label {
-    display: block;
+#title {
+    font-size: 20pt;
     font-weight: bold;
 }
 
-input[type="text"],
-input[type="number"] {
+span {
+    color: red;
+}
+
+.div-form {
     width: 100%;
-    padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
 }
 
-button.btn-creazione {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+.single-form {
+    margin-top: 0.5rem;
 }
 
-.btn-creazione:disabled {
-    color: #cccccc;
-    background-color: #aaaaaa;
-    border: 1px solid #999999;
-    cursor: not-allowed;
+label {
+    margin-top: 0.5rem;
 }
 
-button.btn-creazione:hover {
-    background-color: #0056b3;
+label:hover {
+    transition: color 0.5s;
+    color: darkred;
 }
 
 textarea {
-    width: 100%;
-    height: 150px;
-    box-sizing: border-box;
+    font-size: 9pt;
+    width: 98%;
+    height: 112.5px;
     resize: none;
+}
+
+select {
+    font-size: 9pt;
+    padding: 8px;
+    width: 100%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input {
+    font-size: 9pt;
+    padding: 8px;
+    width: 96%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+select:hover, input:hover {
+    transition: border 0.5s;
+    border: 1px solid darkred;
+}
+
+button {
+    color: white;
+    width: 100%;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    padding: 8px;
+    background-color: crimson;
+    border: none !important;
+    border-radius: 10px;
+}
+
+button:hover {
+    transition: background-color 0.5s;
+    background-color: darkred;
 }
