--- a/frontend/src/app/components/form-story-object/form-story-object.component.html
+++ b/frontend/src/app/components/form-story-object/form-story-object.component.html
@@ -3,7 +3,7 @@
     <div class="div-object">
         <p id="title">Inserisci i <span>dati</span> dell'<span>oggetto</span></p>
         <form (ngSubmit)="onSubmit()">
-        <div class="div-form">
+            <div class="div-form">
                 <label for="nome">Nome</label>
                 <input type="text" id="nome" name="nome" required [(ngModel)]="nome">
                 <label for="descrizione">Descrizione</label>
@@ -13,19 +13,18 @@
         </form>
     </div>
 </div>
-
-<!--se mi trovo nella modalità di modifica testo oggetto-->
-<div class="story-object-container" *ngIf="isInTextEditMode">
-    <h1>Aggiorna le informazioni dell'Oggetto Storia</h1>
-    <form class="story-object-form" (ngSubmit)="updateStoryObjectText()">
-        <div class="form-group">
-            <label for="nome">Nome dell'Oggetto:</label>
-            <input *ngIf="currentStoryObject" type="text" id="nome" name="nome" required [ngModel]="currentStoryObject.nome" (ngModelChange)="onNameChange($event)"> 
-        </div>
-        <div class="form-group">
-            <label for="descrizione">Descrizione dell'Oggetto:</label>
-            <textarea *ngIf="currentStoryObject" id="descrizione" name="descrizione" required [ngModel]="currentStoryObject.descrizione" (ngModelChange)="onDescriptionChange($event)"></textarea>
-        </div>
-        <button type="submit" class="btn-creazione" [disabled]="isUpdated()">Aggiorna Oggetto Storia</button>
-    </form>
+<!-- html attuato per aggiornare i campi di un oggetto -->
+<div class="container" *ngIf="isInTextEditMode">
+    <div class="div-object">
+        <p id="title">Aggiorna i <span>dati</span> dell'<span>oggetto</span></p>
+        <form (ngSubmit)="onSubmit()">
+            <div class="div-form">
+                <label for="nome">Nome</label>
+                <input *ngIf="currentStoryObject" type="text" id="nome" name="nome" required [ngModel]="currentStoryObject.nome" (ngModelChange)="onNameChange($event)"> 
+                <label for="descrizione">Descrizione</label>
+                <textarea *ngIf="currentStoryObject" id="descrizione" name="descrizione" required [ngModel]="currentStoryObject.descrizione" (ngModelChange)="onDescriptionChange($event)"></textarea>
+                <button type="submit" class="btn-creazione" [disabled]="isUpdated()">Aggiorna Oggetto Storia</button>
+            </div>
+        </form>
+    </div>
 </div>
