--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,64 +1,65 @@
 <nav class="navbar">
-    <div class="logo">
-        <label *ngIf="currentUrl === '/home' || currentUrl === '/storJPage'">storJ</label>
-        <div class="arrow">
-            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-            <button mat-button *ngIf="isAuthenticated() && currentUrl != '/storJPage'" (click)="goBack(currentUrl)">
-                <mat-icon>arrow_back</mat-icon>
-            </button>
-        </div>
-    </div>
-
     <div class="login">
-        <!-- Mostra questi pulsanti solo se l'utente NON è autenticato -->
-        <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">Sign In</button>
-        <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">Sign Up</button>
+        <div class="logo">
+            <label *ngIf="currentUrl === '/home' || currentUrl === '/storJPage'"><img id="image" src="../../../assets/image/storJ.png"></label>
+            <div class="arrow">
+                <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+                <button mat-button *ngIf="isAuthenticated() && currentUrl != '/storJPage'" (click)="goBack(currentUrl)">
+                    <mat-icon>arrow_back</mat-icon>
+                </button>
+            </div>
+        </div>
+        <div class="div-button">
+            <!-- Mostra questi pulsanti solo se l'utente NON è autenticato -->
+            <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">Sign In</button>
+            <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">Sign Up</button>
 
-        <!-- Mostra il bottone "Paga" solo se showPaymentButton è true -->
-        <button mat-button routerLink="/payment" *ngIf="currentUrl === '/storJPage' && showPaymentButton">Paga</button>
+            <!-- Mostra il bottone "Paga" solo se showPaymentButton è true -->
+            <button mat-button routerLink="/payment" *ngIf="currentUrl === '/storJPage' && showPaymentButton">Paga</button>
 
-        <!-- Mostra il bottone "Crea Scenario" solo se l'utente è su "/createStory" -->
-        <button mat-button *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode"
-            (click)="saveStory()">Salva
-            Storia</button>
-        <button mat-button routerLink="/formScenario"
-            *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode">Crea
-            Scenario</button>
-        <button mat-button routerLink="/storyObjects"
-            *ngIf="currentUrl === '/createStory' && isAuthenticated()">Oggetti</button>
+            <!-- Mostra il bottone "Crea Scenario" solo se l'utente è su "/createStory" -->
+            <button mat-button *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode"
+                (click)="saveStory()">Salva
+                Storia</button>
+            <button mat-button routerLink="/formScenario"
+                *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode">Crea
+                Scenario</button>
+            <button mat-button routerLink="/storyObjects"
+                *ngIf="currentUrl === '/createStory' && isAuthenticated()">Oggetti</button>
 
-        <!-- Mostra il bottone "Crea oggetto" solo se l'utente è su "/storyObjects" -->
-        <button mat-button routerLink="/formStoryObject"
-            *ngIf="currentUrl === '/storyObjects' && isAuthenticated() && !isInTextEditMode">Crea Oggetto</button>
+            <!-- Mostra il bottone "Crea oggetto" solo se l'utente è su "/storyObjects" -->
+            <button mat-button routerLink="/formStoryObject"
+                *ngIf="currentUrl === '/storyObjects' && isAuthenticated() && !isInTextEditMode">Crea Oggetto</button>
 
-        <!-- Mostra questo pulsante solo se l'utente è autenticato e ha effettuato il pagamento -->
-        <button mat-button routerLink="/handlerPlaypage"
-            *ngIf="currentUrl === '/storJPage' &&  isAuthenticated() && !showPaymentButton">Gioca</button>
+            <!-- Mostra questo pulsante solo se l'utente è autenticato e ha effettuato il pagamento -->
+            <button mat-button routerLink="/handlerPlaypage"
+                *ngIf="currentUrl === '/storJPage' &&  isAuthenticated() && !showPaymentButton">Gioca</button>
 
-        <button mat-button routerLink="/homeStories"
-            *ngIf="currentUrl === '/storJPage' && isAuthenticated()">Crea</button>
+            <button mat-button routerLink="/homeStories"
+                *ngIf="currentUrl === '/storJPage' && isAuthenticated()">Crea</button>
 
-        <!-- Mostra questo pulsante solo se l'utente si trova in homestories -->
-        <button mat-button routerLink="/formStory" *ngIf="currentUrl === '/homeStories' && isAuthenticated()">Crea
-            storia</button>
+            <!-- Mostra questo pulsante solo se l'utente si trova in homestories -->
+            <button mat-button routerLink="/formStory" *ngIf="currentUrl === '/homeStories' && isAuthenticated()">Crea
+                storia</button>
 
-        <!-- Mostra questo pulsante solo se l'utente si trova in formMultipleChoices -->
-        <button mat-button routerLink="/formMultipleChoice"
-            *ngIf="currentUrl === '/multiplechoice' && isAuthenticated() && !isInTextEditMode">Crea scelta</button>
+            <!-- Mostra questo pulsante solo se l'utente si trova in formMultipleChoices -->
+            <button mat-button routerLink="/formMultipleChoice"
+                *ngIf="currentUrl === '/multiplechoice' && isAuthenticated() && !isInTextEditMode">Crea scelta</button>
 
-        <!-- Mostra questo pulsante solo se l'utente si trova in formSingleChoice -->
-        <button mat-button routerLink="/formSingleChoice"
-            *ngIf="currentUrl === '/singlechoice' && isAuthenticated() && !getIsSingleChoiceCreated() && !isInTextEditMode">Crea
-            scelta</button>
+            <!-- Mostra questo pulsante solo se l'utente si trova in formSingleChoice -->
+            <button mat-button routerLink="/formSingleChoice"
+                *ngIf="currentUrl === '/singlechoice' && isAuthenticated() && !getIsSingleChoiceCreated() && !isInTextEditMode">Crea
+                scelta</button>
 
-        <!-- Mostra questo pulsante solo se l'utente si trova in formSingleChoice -->
-        <button mat-button routerLink="/match" *ngIf="currentUrl === '/handlerPlaypage' && isAuthenticated()">Mie
-            Partite</button>
+            <!-- Mostra questo pulsante solo se l'utente si trova in formSingleChoice -->
+            <button mat-button routerLink="/match" *ngIf="currentUrl === '/handlerPlaypage' && isAuthenticated()">Mie
+                Partite</button>
 
-        <!-- Mostra questo pulsante solo se l'utente si trova in playPage -->
-        <button mat-button (click)="openInventory()"
-            *ngIf="isAuthenticated() && currentUrl === '/playPage'">inventario</button>
+            <!-- Mostra questo pulsante solo se l'utente si trova in playPage -->
+            <button mat-button (click)="openInventory()"
+                *ngIf="isAuthenticated() && currentUrl === '/playPage'">inventario</button>
 
-        <button mat-button (click)="logout()" *ngIf="isAuthenticated()">Logout</button>
+            <button mat-button (click)="logout()" *ngIf="isAuthenticated()">Logout</button>
+        </div>
     </div>
 </nav>
