--- a/frontend/src/app/components/match/match.component.html
+++ b/frontend/src/app/components/match/match.component.html
@@ -1,12 +1,20 @@
 <app-navbar></app-navbar>
-<div *ngIf="userMatches.length > 0; else noMatches" class="matches-container">
-    <h2>Le tue partite</h2>
-    <div class="match-box" *ngFor="let match of userMatches">
-        <p>Partita ID: {{ match.id }}, Storia ID: {{ match.id_storia }}</p>
-        <button (click)="resumeMatch(match)">Riprendi Partita</button>
-        <button (click)="removeMatch(match)">Rimuovi</button>
+<div class="container">
+    <div class="div-title">
+        <p id="title">Le tue <span>partite</span></p>
     </div>
+    <div class="div-matches" *ngIf="userMatches.length > 0; else noMatches" >
+        <div class="div-single-match" *ngFor="let match of userMatches">
+            <div id="div-info"><label><span id="span-title">Id partita</span><br><span id="span-text">{{ match.id }}</span></label></div>
+            <p></p>
+            <div id="div-info"><label><span id="span-title">Id storia</span><br><span id="span-text">{{ match.id_storia }}</span></label></div>
+            <div class="div-button"> 
+                <div class="div-button-match"><button (click)="resumeMatch(match)">Riprendi</button></div>
+                <div class="div-button-match"><button (click)="removeMatch(match)">Rimuovi</button></div>
+            </div>
+        </div>
+    </div>
+    <ng-template #noMatches>
+        <p>Non hai partite in corso.</p>
+    </ng-template>
 </div>
-<ng-template #noMatches>
-    <p>Non hai partite in corso.</p>
-</ng-template>
